--- a/style.css
+++ b/style.css
@@ -1,49 +1,69 @@
 *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'poppins',Sans-Serif;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
-.container{
-  width: 100%;
-  height: 100vh;
-  background: #001660;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+body{
+    font-family: 'outfit';
+    background: linear-gradient(#ffdsd5,#fff7f9);
 }
-form{
-				background:#fff;
-				display:flex;
-				flex-direction:column;
-				padding:2vw 4vw;
-				width:90%;
-				max-width:600px;
-				border-radius:10px;
-			}
-  form h3{
-  color:#555;
-  font-weight:800;
-  margin-bottom:20px;
- 	}
- 	form input, form textarea{
- 					border:0;
- 					margin:10px 0;
- 					padding:20px;
- 					outline:none;
- 					background:#f5f5f5;
- 					font-size:18px;
- 						}
- 						
- 						form button{
- 						padding:15px;
- 						background:#ff5371;
- 						color:#fff;
- 						font-size:18px;
- 						border:0;
- 						outline:none;
- 						cursor:pointer;
- 						width:150px;
- 						margin:20px auto 0;
- 						border-radius:30px;
- 							}
+.contact-container{
+height: 100vh;
+display: flex;
+align-items: center;
+justify-content: space-evenly;
+}
+.contact-left{
+    display:flex ;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
+}
+.contact-left-title h2{
+    font-weight: 600;
+    color: #a363aa;
+    font-size: 40px;
+    margin-bottom:  5px;
+
+}
+.contact-inputs{
+width: 400px;
+height: 50px;
+border: none;
+outline: none;
+padding-left: 25px;
+font-weight: 500;
+color:#666;
+border-radius: 50px;   
+}
+.contact-left textarea{
+    height: 140px;
+    padding-top:15px;
+    border-radius: 20px; 
+}
+.contact-inputs{
+    border: 2px solid #ff974f;
+    
+}
+.contact-inputs::placeholder{
+    color: #a9a9af;
+    
+}
+.contact-left button{
+    display: flex;
+    align-items: center;
+    padding: 15px 30px;
+    font-size: 16px;
+    color: #fff;
+    gap: 10px;
+   border: none;
+   border-radius: 50px;
+   background: linear-gradient(270deg,#ff99cf,#fa6h86);
+   cursor: pointer;
+    
+}
+@media(max-width:800px){
+    .contact-inputs{
+        width: 80vw;
+    }
+}
